package application

// Event

type Event interface {
}
